Tue Jan 06 11:49:29 2004  George Lebl <jirka@5z.com>

	* daemon/display.c, daemon/gdm.h, daemon/server.c, daemon/slave.c,
 	  daemon/xdmcp.c:  Fix #125064 by correctly reading out the chooser
	  output and ignoring all but the last line.

	* gui/gdmchooser.c: Send a newline BEFORE the chosen host as well
	  as after.  Also fix reading the address on hosts that have IPV6,
	  but that don't use it.

	* gui/greeter/greeter_action_language.c: Get rid of evil 'foo == FALSE'
	  kind of test

	* gui/modules/Makefile.am, gui/modules/dwellmouselistener.c,
	  gui/modules/keymouselistener.c:  Link with ve so that we can use it
	  and ensure that our BINDIR is in the PATH.

Tue Jan 06 10:17:41 2004  George Lebl <jirka@5z.com>

	* daemon/slave.c: small leak fix

	* daemon/slave.c: make greeter restarting on notify smarter and
	  also restart the greeter when the modules stuff changed

	* gui/modules/keymouselistener.c, gui/modules/dwellmouselistener.c:
	  Fix #125153 by changing to busy cursor for 2 seconds after
	  launching something.

	* daemon/verify-shadow.c, daemon/verify-crypt.c: loginrestrictions
	  doesn't use glib to allocate the message (AIX only)

Mon Jan 05 23:35:55 2004  George Lebl <jirka@5z.com>

	* gui/greeter/greeter_action_language.c: apply patch from #123199
	  to allow double click on language to select it.  Patch by 
	  Kirk Mitchener <kmitchener@idc.com>

Mon Jan 05 23:30:38 2004  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/slave.c, daemon/misc.[ch],
	  daemon/getvt.[ch]:  Add QUERY_VT and SET_VT commands that handle
	  the VT's on linux.  This is because not all console logins will
	  actually own /dev/console.  When we change to a VT that we own,
	  also twiddle the cursor to turn off any screensaver or tickle
	  the xscreensaver lock dialog etc...

	* gui/gdmcomm.c: handle displays with the screen thingie set
	  correctly (that is whack the screen part, GDM is not interested
	  in it).
