@@ -33,11 +33,10 @@
 #include <gdk/gdk.h>
 #include <gdk/gdkx.h>
 #include <gtk/gtk.h>
+#include <vicious.h>
 #include <gnome.h>
 
 #include <config.h>
-
-#include <vicious.h>
 
 /*
  * Note that CONFIGFILE will have to be changed to something more generic
